--- a/UI/package.json
+++ b/UI/package.json
@@ -1,12 +1,14 @@
 {
   "name": "resumebuilder",
   "version": "0.1.0",
+  "proxy": "https://us-central1-free-resume-builder.cloudfunctions.net/api",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.11",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
