--- a/UI/package.json
+++ b/UI/package.json
@@ -12,7 +12,8 @@
     "firebase": "^7.14.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-to-pdf": "0.0.11"
   },
   "scripts": {
     "start": "react-scripts start",
